--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -8,6 +8,7 @@
 
     <!-- PWA stuff -->
     <link rel="manifest" href="/manifest.json" />
+    <!-- <link rel="icon" type="image/ico" href="favicon.ico" id="dynamic-favicon" /> -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="DC-Covers">
