--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -17,8 +17,8 @@
 
 
     <title>conduktor</title>
-    <link rel="stylesheet" href="css/FontRoboto.css">
-    <link rel="stylesheet" href="css/MaterialIcons.css">
+    <!-- <link rel="stylesheet" href="css/FontRoboto.css">
+    <link rel="stylesheet" href="css/MaterialIcons.css"> -->
   </head>
   <body>
     <noscript>
