--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -7,14 +7,14 @@
     
 
     <!-- PWA stuff -->
-    <link rel="manifest" href="/manifest.json" />
+<!--     <link rel="manifest" href="/manifest.json" />
     
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="DC-Covers">
     <meta name="msapplication-TileImage" content="link to the image in static folder">
     <meta name="msapplication-TileColor" content="#000">
-
+ -->
 
     <title>conduktor</title>
     <!-- <link rel="stylesheet" href="css/FontRoboto.css">
