--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -16,15 +16,16 @@
     <meta name="msapplication-TileColor" content="#000">
  -->
 
-    <title>conduktor</title>
+    <title>vermuth</title>
     <!-- <link rel="stylesheet" href="css/FontRoboto.css">
     <link rel="stylesheet" href="css/MaterialIcons.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <!-- <script src="http://13.13.13.137:8098"></script> -->
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but conduktor doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but vermuth doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
