--- a/viewer/public/index.html
+++ b/viewer/public/index.html
@@ -17,10 +17,10 @@
  -->
 
     <title>vermuth</title>
-    <!-- <link rel="stylesheet" href="css/FontRoboto.css">
-    <link rel="stylesheet" href="css/MaterialIcons.css"> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="css/FontRoboto.css">
+    <link rel="stylesheet" href="css/MaterialIcons.css">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"> -->
     <!-- <script src="http://13.13.13.137:8098"></script> -->
   </head>
   <body>
